<resources>
    <string name="app_name">Book app</string>
    <string name="welcome_app">Welcome to Book App</string>
    <string name="login">Login</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="please_login">Please Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="abs_example_com">abs@example.com</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_new_category">Add a new Category</string>
    <string name="category_title">Category title</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="add_a_new_book">Add a New Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="books">Books</string>
    <string name="category">Category</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
</resources>