<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".DashboardAdminActivity">


    <!--  Toolbar  -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">


        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/dashboard_admin"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:layout_centerHorizontal="true"
            android:text="@string/abs_example_com"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logout_white" />


    </RelativeLayout>


    <!--  Bottom layout  -->
    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <!--    Add Category   -->
        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape01"
            android:minHeight="50dp"
            android:text="@string/add_category"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white" />


        <!--    Add PDF    -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfFab"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_pdf_white"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/purple_500"
            app:fabCustomSize="50dp"
            app:tint="@color/white" />


    </LinearLayout>

</RelativeLayout>