<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".CategoryAddActivity">


    <!--    Toolbar    -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/shape_toolbar01">

        <!--    back button     -->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@+id/backBtn"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="28sp"
            android:text="@string/add_new_category"
            android:textColor="@color/white" />


    </RelativeLayout>

    <!--  Input Category  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categotyTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="30dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/categoryEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_category_grey"
            android:drawablePadding="10dp"
            android:hint="@string/category_title"
            android:inputType="textPersonName|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray01" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--  Add category button  -->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categotyTil"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_shape01"
        android:text="@string/submit"
        android:textColor="@color/white" />


</RelativeLayout>